@@ -15,7 +15,10 @@ changes relative to sbcl-1.3.17:
     For instance, two functions returning the literal string "HI"
     might return EQ strings after collapsing, which may be undesired
     in a particular use. The flag pertains to gencgc only.
-    
+  * bug fix: MAKE-PATHNAME removes empty strings as components of a
+    directory, as is permitted: "Whenever a pathname is constructed
+    the components may be canonicalized if appropriate."
+
 changes in sbcl-1.3.17 relative to sbcl-1.3.16:
   * enhancement: memory overhead from the garbage collector's metadata
     is reduced on 64-bit architectures; no change for 32-bit.
